--- a/WebLegemClient/bower.json
+++ b/WebLegemClient/bower.json
@@ -32,7 +32,7 @@
     "bootstrap": "~3.3.6",
     "jquery": "~2.2.2",
     "ng-file-upload": "~10.0.2",
-    "ng-quill": "~1.4.0",
+    "ngquill": "~1.4.0",
     "overthrow": "~0.7.1",
     "underscore": "^1.8.3",
     "normalize-css": "~4.1.1"
